Development session (2026-07-20): Delete acc
